[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interfaz.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 39
font_data = ExtResource( 1 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_left = 328.0
margin_right = 713.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 1 )
text = "1000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
margin_left = 184.0
margin_top = 104.0
margin_right = 880.0
margin_bottom = 297.0
custom_fonts/font = SubResource( 2 )
text = "Score
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 328.0
margin_top = 464.0
margin_right = 776.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 3 )
text = "Jugar de nuevo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.378
one_shot = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
